--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
-    "jest-environment-jsdom": "^30.0.5"
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "jest-environment-jsdom": "^30.0.5",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
